# Thresholding

global/: CMakeLists.txt  globalTypes.cpp
local/adaptiveGauss/: CMakeLists.txt  adaptiveGauss_eg.cpp
local/adaptiveMean/example1/: CMakeLists.txt  adaptiveMean_eg1.cpp
local/adaptiveMean/example2/: CMakeLists.txt  adaptiveMean_eg2.cpp
local/constantCheck/: CMakeLists.txt  constantCheck.cpp
local/otsu/: CMakeLists.txt  otsu.cpp
